media query, breakpoints

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         content="Aprenda HTML5, CSS3 e SEO de forma simples, prática e objetiva desenvolvendo passo a passo do zero até a hospedagem um site one page moderno e responsivo."
     >
     <link rel="icon" href="img/favicon.png">
+    <link  rel="stylesheet" href="style.css">
+    
     
 </head>
 <body>
