semantica, heading tags

--- a/index.html
+++ b/index.html
@@ -12,6 +12,40 @@
     
 </head>
 <body>
+    <!-- Cabeçalho -->
+    <header>
+
+    </header>
+    <!-- Destaque, conteúdo principal -->
+    <main>
+
+    </main>
+    <!-- Sobre - Sessão -->
+    <section>
+        <h1>HTML e CSS</h1>
+        <h2>Você faz. você vê. Vocẽ aprende</h2>
+
+    </section>
+    <!-- (o que é) One page -->
+    <sectiom>
+        <h2>One Page Site</h2>
+    </sectiom>
+    <!-- Wireframe dowload -->
+    <section>
+        <h2>Wireframe</h2>
+    </section>
+    <!-- Conteúdo -->
+    <section>
+        <h2>conteúdo</h2>
+        <h3>HTML5</h3>
+        <h3>BOX MODEL CSS</h3>
+        <h3>Break points</h3>
+    </section>
+
+    <!-- rodapé -->
+    <footer>
+
+    </footer>
     
 </body>
 </html>
