--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section>
         <div class="Container">
             <h1>HTML e CSS</h1>
-            <h2>Você faz. você vê. Vocẽ aprende</h2>
+            <h2>Você faz. você vê. Você aprende</h2>
         </div>
         
 
