Estrutura do html do caceçalho e do menu responsivo

--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
 <body>
     <!-- Cabeçalho -->
     <header>
+        <div class="Container">
+            <div id="logo">
+                <img src="img/logo.png" alt="hal 9000">
+            </div>
+        </div>
+        <nav>
+            <input type="checkbox" id="check">
+            <label for="check">&#x268c;</label>
+            <ul>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Conteúdo</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
 
     </header>
     <!-- Destaque, conteúdo principal -->
