Links internos; css #topo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!-- Cabeçalho -->
-    <header>
+    <header id="inicio">
         <div class="Container">
             <div id="logo">
                 <img src="img/logo.png" alt="hal 9000">
@@ -25,10 +25,10 @@
             <input type="checkbox" id="check">
             <label for="check">&#x268c;</label>
             <ul>
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Conteúdo</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#inicio">Início</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#conteudo">Conteúdo</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
 
@@ -38,7 +38,7 @@
 
     </main>
     <!-- Sobre - Sessão -->
-    <section>
+    <section id="sobre">
         <div class="Container">
             <h1>HTML e CSS</h1>
             <h2>Você faz. você vê. Você aprende</h2>
@@ -59,7 +59,7 @@
         </div>
     </section>
     <!-- Conteúdo -->
-    <section>
+    <section id="conteudo">
         <div class="Container">
             <h2>conteúdo</h2>
             <h3>HTML5</h3>
@@ -69,12 +69,14 @@
     </section>
 
     <!-- rodapé -->
-    <footer>
+    <footer id="contato">
         <div class="Container">
 
         </div>
         
     </footer>
+    <a href="#inicio" id="topo"><img src="img/topo.png" alt="topo do site"></a> 
+    <!-- mudar id para 'ao-topo' colocar a imagem no fim de cada sessão/container -->
     
 </body>
 </html>
