--- a/index.html
+++ b/index.html
@@ -16,21 +16,22 @@
 <body>
     <!-- Cabeçalho -->
     <header id="inicio">
-        <div class="Container">
+        <div class="Container Flex">
             <div id="logo">
                 <img src="img/logo.png" alt="hal 9000">
             </div>
+            <nav>
+                <input type="checkbox" id="check">
+                <label for="check">&#x268c;</label>
+                <ul>
+                    <li><a href="#inicio">Início</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#conteudo">Conteúdo</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <input type="checkbox" id="check">
-            <label for="check">&#x268c;</label>
-            <ul>
-                <li><a href="#inicio">Início</a></li>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#conteudo">Conteúdo</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
+        
 
     </header>
     <!-- Destaque, conteúdo principal -->
