--- a/index.html
+++ b/index.html
@@ -36,13 +36,19 @@
     </header>
     <!-- Destaque, conteúdo principal -->
     <main>
+        <div class="Container">
+            <h1>HTML e CSS</h1>
+            <h2>Você faz. você vê. Você aprende</h2>
+            <a href="https://www.youtube.com/playlist?list=PLbEOwbQR9lqySIIlPJ-Qwo4f4HSuXVeWk" target="_blank" class="Botao">Saiba
+                +</a>
+        </div>
 
     </main>
     <!-- Sobre - Sessão -->
     <section id="sobre">
         <div class="Container">
-            <h1>HTML e CSS</h1>
-            <h2>Você faz. você vê. Você aprende</h2>
+            
+            <h2>Aprender na Prática</h2>
         </div>
         
 
