ajustes de elementos e efeito paralax da sessão sobre

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section id="sobre">
         <div class="Container Flex2">  
              <div id="destaqueSobre">
-                <img src="/img/html5css3.jpg" alt="notebook">
+                <img src="/img/html5css3.jpg" alt="html5css3">
             </div> 
             <div id="textoSobre">
                 <h2>Aprender na Prática</h2>
