--- a/index.html
+++ b/index.html
@@ -99,12 +99,19 @@
     <section id="wireframe">
       <div class="Container Flex2">
         <div id="textoWire">
-            <h2>Wireframe</h2>
-            <p>Wireframe é uma representação visual da estrutura básica de uma página. Ele deve ser feito da maneira mais simples possível, mostrando apenas o essencial, como uma espécie de rascunho, sem cores ou imagens. Clique no botão <span>ou escaneie o QR Code </span>para obter o wireframe desta página.</p>
-                <a href="wireframe.pdf" target="_blank" class="Botao">PDF</a>                
+          <h2>Wireframe</h2>
+          <p>
+            Wireframe é uma representação visual da estrutura básica de uma
+            página. Ele deve ser feito da maneira mais simples possível,
+            mostrando apenas o essencial, como uma espécie de rascunho, sem
+            cores ou imagens. Clique no botão
+            <span>ou escaneie o QR Code </span>para obter o wireframe desta
+            página.
+          </p>
+          <a href="wireframe.pdf" target="_blank" class="Botao">PDF</a>
         </div>
         <div id="qrcode">
-            <img src="img/qrcode.png" alt="qrcode">
+          <img src="img/qrcode.png" alt="qrcode" />
         </div>
       </div>
     </section>
@@ -112,10 +119,29 @@
     <section id="conteudo">
       <div class="Container">
         <h2>conteúdo</h2>
-        <h3>HTML5</h3>
-        <h3>BOX MODEL CSS</h3>
-        <h3>Break points</h3>
-      </div>
+        <div class="Cards Flex4">
+            <div class="Card">
+                <img src="img/estruturahtml.png" alt="Estrutura html5" />
+                <h3>HTML5</h3>
+                <p> O html é usado para exibir conteúdo na WEB e a estrutura do documento é dividida em partes conforme indicado neste cartão.
+                </p>
+                <a href="https://youtu.be/EUpLb_A8cTI" target="_blank" class="Botao">Saiba +</a>
+            </div>
+            <div class="Card">
+                <img src="img/boxmodel.png" alt="Box model CSS" />
+                <h3>BOX MODEL CSS</h3>
+                <p>O box model relaciona as propriedades descritas neste cartão para compor a dimensão do elemento.
+                </p>
+                <a href="https://youtu.be/dkbs-8ZRzZU" target="_blank" class="Botao">Saiba +</a>
+            </div> 
+            <div class="Card">
+                <img src="img/breakpoints.png" alt="breakpoints">
+                <h3>BREAKPOINTS</h3>
+                <p>Partindo sempre do smartphone em modo portrait, usamos como referência os valores descritos neste cartão.</p>
+                <a href="https://youtu.be/BO-VzBNyEOs" target="_blank" class="Botao">Saiba +</a>
+            </div>       
+            
+        </div>    
     </section>
 
     <!-- rodapé -->
