--- a/index.html
+++ b/index.html
@@ -118,30 +118,34 @@
     <!-- Conteúdo -->
     <section id="conteudo">
       <div class="Container">
-        <h2>conteúdo</h2>
-        <div class="Cards Flex4">
-            <div class="Card">
-                <img src="img/estruturahtml.png" alt="Estrutura html5" />
-                <h3>HTML5</h3>
-                <p> O html é usado para exibir conteúdo na WEB e a estrutura do documento é dividida em partes conforme indicado neste cartão.
-                </p>
-                <a href="https://youtu.be/EUpLb_A8cTI" target="_blank" class="Botao">Saiba +</a>
-            </div>
-            <div class="Card">
-                <img src="img/boxmodel.png" alt="Box model CSS" />
-                <h3>BOX MODEL CSS</h3>
-                <p>O box model relaciona as propriedades descritas neste cartão para compor a dimensão do elemento.
-                </p>
-                <a href="https://youtu.be/dkbs-8ZRzZU" target="_blank" class="Botao">Saiba +</a>
+            <h2>conteúdo</h2>
+            <div class="Cards Flex4">
+                <div class="Card">
+                    <img src="img/estruturahtml.png" alt="Estrutura html5" />
+                    <h3>HTML5</h3>
+                    <p> O html é usado para exibir conteúdo na WEB e a estrutura do documento é dividida em partes conforme indicado neste cartão.
+                    </p>
+                    <a href="https://youtu.be/EUpLb_A8cTI" target="_blank" class="Botao">Saiba +</a>
+                </div>
+                <div class="Card">
+                    <img src="img/boxmodel.png" alt="Box model CSS" />
+                    <h3>BOX MODEL CSS</h3>
+                    <p>O box model relaciona as propriedades descritas neste cartão para compor a dimensão do elemento.
+                    </p>
+                    <a href="https://youtu.be/dkbs-8ZRzZU" target="_blank" class="Botao">Saiba +</a>
+                </div> 
+                <div class="Card">
+                    <img src="img/breakpoints.png" alt="breakpoints">
+                    <h3>BREAKPOINTS</h3>
+                    <p>Partindo sempre do smartphone em modo portrait, usamos como referência os valores descritos neste cartão.</p>
+                    <a href="https://youtu.be/BO-VzBNyEOs" target="_blank" class="Botao">Saiba +</a>
+                </div>              
             </div> 
-            <div class="Card">
-                <img src="img/breakpoints.png" alt="breakpoints">
-                <h3>BREAKPOINTS</h3>
-                <p>Partindo sempre do smartphone em modo portrait, usamos como referência os valores descritos neste cartão.</p>
-                <a href="https://youtu.be/BO-VzBNyEOs" target="_blank" class="Botao">Saiba +</a>
-            </div>       
-            
-        </div>    
+             <div id="todos">
+                <a href="https://www.youtube.com/playlist?list=PLbEOwbQR9lqySIIlPJ-Qwo4f4HSuXVeWk"
+                    target="_blank">Conheça todos >></a>
+            </div>
+        </div>
     </section>
 
     <!-- rodapé -->
