--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@
             <div>
                 <a href="https://goo.gl/maps/aX1WcCsNf3MW9y3ZA"><img src="img/mapa.png" alt="Mapa" id="iconeMapa"></a>
                     <img src="img/local.png" alt="local" id="iconeLocal">
-                    <p>Rua Dias Vieira, 800/p>
+                    <p>Rua Dias Vieira, 800</p>
                     <p>Jd. Monte Kemel</p>
                     <p>São Paulo - SP</p>
                     <a href="mailto:seuemail@email.com?subject=HTML5CSS3">
                         <img src="img/email.png" alt="email" title="Enviar E-mail">
                         <p>seuemail@email.com</p>
                     </a>
-                    <p id="dados">&#128064; Endereço e dados de contato ficticios</p>
+                    <p id="dados">&#128064; </p>
             </div>
              <div id="googleMaps">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d457.0214096593172!2d-46.73654451508179!3d-23.598189550082996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5720da8c671f%3A0xacea1354de76615f!2sEspa%C3%A7o%20Cultural%20Monte%20Kemel!5e0!3m2!1spt-BR!2sbr!4v1684113586883!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
