Ajustes ok, bug do menu em pc ok

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <!-- Conteúdo -->
     <section id="conteudo">
       <div class="Container">
-            <h2>conteúdo</h2>
+            <h2>Conteúdo</h2>
             <div class="Cards Flex4">
                 <div class="Card">
                     <img src="img/estruturahtml.png" alt="Estrutura html5" />
@@ -151,7 +151,7 @@
     <!-- rodapé -->
     <address>
         <div class="Container Flex6">
-            <div id="conntato">
+            <div id="contato">
                 <a href="https://api.whatsapp.com/send?phone=5511012345678" target="_blank">                    
                 </a>
                 <img src="img/whatsapp.png" alt="whatsapp" title="Abrir no WhatsApp">
